Update based on design